# Math_Modeling_APMCM

./: .gitignore  README.md  main.py  pyproject.toml
.trae/rules/: project_rules.md
code/: Q3_game_theory.py  Q4_elasticity_polyfit.py  Q4_imports_forecast_without_tariff.py  Q4_tariff_shock_elasticity.py  imports_forecast.py  temp.md  temp.py
code/notebook/: Q1.ipynb  Q2.ipynb  Q3.ipynb  Q4.ipynb
data/processed/: Q1.1.soybean_imports_quantity_price.json  Q1.Argentina.csv  Q1.Brazil.csv  Q1.USA.csv  Q1.market_share_and_scores.json  Q1.multidimensional_radar.json  Q1.share_forecast_2024_2027.json  Q1.topsis_entropy_weights.json  Q1.topsis_scores_pre_post.json  Q1.trade_effect_data.csv  Q1.trade_effect_pred_pre_post.json  Q4.trade_war_2018_2019.csv  Q4_IMPTOTUS_2017_2020.csv  Q4_IMPTOTUS_ALL.csv  Q4_IMPTOTUS_forecast_without_tariff_48m.csv  Q4_IMPTOTUS_trade_war_elasticity.csv  china-import-2024~2025.csv  soybean-usa-china-2015~2025.csv
viz/: Q1.1.china_soybean_import_share_stacked_area_chart.html  Q1.1.china_soybean_imports_quantity_and_price.html  Q1.2.entropy_topsis_dashboard.html  Q1.2.tariff_impact_analysis.html  Q1.3.soybean_import_share_forecast.html  Q1.3.trade_effect_lr.html  Q2.cost_breakeven_analysis.html  Q2.trade_diversion.html  china_soybean_imports.html  tariff_impact_analysis.html  test.html
viz/paper/: Untitled-1.sty  Untitled-2.sty
